# comment-service

.github/workflows/: rust.yml
crates/database/: Cargo.toml
crates/database/migrations/2026-02-02-211459-0000_create_comments/: up.sql
crates/database/src/: create.rs  delete.rs  errors.rs  lib.rs  models.rs  read.rs  schema.rs  update.rs
crates/database/src/models/: comments.rs  mod.rs
crates/database/src/web_request/: comment.rs  comments.rs  error_request.rs  mod.rs  request.rs
crates/database/tests/: crud_comments.rs
crates/web_server/: Cargo.toml
crates/web_server/src/: app.rs  comments.rs  error.rs  errors.rs  main.rs
crates/web_server/src/handlers/: comments.rs
crates/web_server/src/routes/: comments.rs
