[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
diesel = { version = "2.3.6", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = {version = "1.20.0", features = ["serde"] }
log = "0.4.29"
